@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>514</width>
     <height>312</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>400</width>
+    <width>514</width>
     <height>312</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>400</width>
+    <width>514</width>
     <height>312</height>
    </size>
   </property>
@@ -31,32 +31,36 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="verticalLayoutWidget">
+  <property name="sizeGripEnabled">
+   <bool>true</bool>
+  </property>
+  <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>401</width>
+     <width>511</width>
      <height>311</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <property name="leftMargin">
-     <number>8</number>
-    </property>
-    <property name="topMargin">
-     <number>16</number>
-    </property>
-    <property name="rightMargin">
-     <number>8</number>
-    </property>
-    <property name="bottomMargin">
-     <number>16</number>
-    </property>
-    <item>
+   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0">
+    <item row="1" column="0">
+     <widget class="QDialogButtonBox" name="buttonBox">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="standardButtons">
+       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      </property>
+      <property name="centerButtons">
+       <bool>false</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>4</number>
+       <number>5</number>
       </property>
       <widget class="QWidget" name="tab_1">
        <attribute name="title">
@@ -153,9 +157,15 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>381</width>
+          <width>561</width>
           <height>211</height>
          </rect>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
         <property name="horizontalScrollBarPolicy">
          <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -298,7 +308,7 @@
          <rect>
           <x>70</x>
           <y>60</y>
-          <width>291</width>
+          <width>411</width>
           <height>24</height>
          </rect>
         </property>
@@ -319,8 +329,8 @@
        <widget class="QPushButton" name="btnCheckUpdate">
         <property name="geometry">
          <rect>
-          <x>270</x>
-          <y>170</y>
+          <x>400</x>
+          <y>90</y>
           <width>85</width>
           <height>27</height>
          </rect>
@@ -337,8 +347,8 @@
        <widget class="QLabel" name="label_8">
         <property name="geometry">
          <rect>
-          <x>10</x>
-          <y>15</y>
+          <x>30</x>
+          <y>17</y>
           <width>62</width>
           <height>17</height>
          </rect>
@@ -350,38 +360,113 @@
        <widget class="QComboBox" name="cbFontSize">
         <property name="geometry">
          <rect>
-          <x>120</x>
-          <y>8</y>
+          <x>140</x>
+          <y>10</y>
           <width>85</width>
           <height>27</height>
          </rect>
         </property>
        </widget>
       </widget>
-     </widget>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QDialogButtonBox" name="buttonBox">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
+      <widget class="QWidget" name="tab_5">
+       <attribute name="title">
+        <string>Runtime</string>
+       </attribute>
+       <widget class="QLabel" name="label_9">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>281</width>
+          <height>17</height>
+         </rect>
         </property>
-        <property name="standardButtons">
-         <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-        </property>
-        <property name="centerButtons">
-         <bool>false</bool>
+        <property name="text">
+         <string>Full path to the lgck-runtime (external)</string>
         </property>
        </widget>
-      </item>
-     </layout>
+       <widget class="QLineEdit" name="eRuntime">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>30</y>
+          <width>431</width>
+          <height>27</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="btnRuntime">
+        <property name="geometry">
+         <rect>
+          <x>450</x>
+          <y>30</y>
+          <width>31</width>
+          <height>27</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_10">
+        <property name="geometry">
+         <rect>
+          <x>12</x>
+          <y>60</y>
+          <width>410</width>
+          <height>17</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Run time arguments</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="eRuntimeArgs">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>80</y>
+          <width>351</width>
+          <height>27</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="btnRestore">
+        <property name="geometry">
+         <rect>
+          <x>380</x>
+          <y>80</y>
+          <width>93</width>
+          <height>27</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Restore</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="sArgsHelp">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>120</y>
+          <width>331</width>
+          <height>91</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>%1 ;gcldb filename</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+        </property>
+       </widget>
+      </widget>
+     </widget>
     </item>
    </layout>
   </widget>
  </widget>
  <tabstops>
-  <tabstop>tabWidget</tabstop>
   <tabstop>cShowGrid</tabstop>
   <tabstop>cbGridSize</tabstop>
   <tabstop>eGridColor</tabstop>
@@ -391,7 +476,6 @@
   <tabstop>eScore</tabstop>
   <tabstop>eHitPoints</tabstop>
   <tabstop>cbLives</tabstop>
-  <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
  <connections>
